Archive2/ce/b1bf3d16182760/output
main.cpp:1:23: error: extra tokens at end of #include directive
  #include <algorithm> # Include <algorithm>
                       ^
main.cpp:2:19: error: extra tokens at end of #include directive
 #include <string> # Include <cadena>
                   ^
main.cpp:3:21: error: extra tokens at end of #include directive
 #include <iostream> # Include <iostream>
                     ^
main.cpp:10:28: warning: multi-character character constant [-Wmultichar]
         std:: cout << s << ' \n ' ; std :: cout << s << '\ n';
                            ^
main.cpp:10:57: error: unknown escape sequence: '\040'
         std:: cout << s << ' \n ' ; std :: cout << s << '\ n';
                                                         ^
main.cpp:10:57: warning: multi-character character constant [-Wmultichar]
main.cpp:5:14: error: expected initializer before 'int'
 int main ( ) int main ()
              ^
